name:             hspec-discover-integration-tests
version:          0.0.0
build-type:       Simple
cabal-version:    >= 1.10

library
  default-language: Haskell2010

test-suite empty
  build-tool-depends: hspec-discover:hspec-discover
  type:
      exitcode-stdio-1.0
  ghc-options:
      -Wall
  hs-source-dirs:
      empty
  main-is:
      Spec.hs
  build-depends:
      base    == 4.*
    , hspec
  default-language: Haskell2010

test-suite with-formatter
  build-tool-depends: hspec-discover:hspec-discover
  type:
      exitcode-stdio-1.0
  ghc-options:
      -Wall
  hs-source-dirs:
      with-formatter
  main-is:
      Spec.hs
  other-modules:
      FooSpec
  build-depends:
      base    == 4.*
    , hspec
  default-language: Haskell2010

test-suite with-io-formatter
  build-tool-depends: hspec-discover:hspec-discover
  type:
      exitcode-stdio-1.0
  ghc-options:
      -Wall
  hs-source-dirs:
      with-io-formatter
  main-is:
      Spec.hs
  other-modules:
      FooSpec
      Formatter
  build-depends:
      base    == 4.*
    , hspec
    , transformers
  default-language: Haskell2010

test-suite with-formatter-empty
  build-tool-depends: hspec-discover:hspec-discover
  type:
      exitcode-stdio-1.0
  ghc-options:
      -Wall
  hs-source-dirs:
      with-formatter-empty
  main-is:
      Spec.hs
  build-depends:
      base    == 4.*
    , hspec
  default-language: Haskell2010

test-suite with-no-main
  build-tool-depends: hspec-discover:hspec-discover
  type:
      exitcode-stdio-1.0
  ghc-options:
      -Wall
  hs-source-dirs:
      with-no-main
  main-is:
      Main.hs
  other-modules:
      Spec
  build-depends:
      base    == 4.*
    , hspec
  default-language: Haskell2010

test-suite with-module-name
  build-tool-depends: hspec-discover:hspec-discover
  type:
      exitcode-stdio-1.0
  ghc-options:
      -Wall
  hs-source-dirs:
      with-module-name
  main-is:
      Main.hs
  other-modules:
      Spec
  build-depends:
      base    == 4.*
    , hspec
  default-language: Haskell2010

test-suite with-no-implicit-prelude
  build-tool-depends: hspec-discover:hspec-discover
  type:
      exitcode-stdio-1.0
  ghc-options:
      -Wall
  hs-source-dirs:
      with-no-implicit-prelude
  main-is:
      Spec.hs
  other-modules:
      FooSpec
  build-depends:
      base    == 4.*
    , hspec
  default-extensions: NoImplicitPrelude
  default-language: Haskell2010

test-suite with-spec-hook
  build-tool-depends: hspec-discover:hspec-discover
  type:
      exitcode-stdio-1.0
  ghc-options:
      -Wall
  hs-source-dirs:
      with-spec-hook
  main-is:
      Spec.hs
  other-modules:
      FooSpec
      SpecHook
      Foo.BarSpec
      Foo.BazSpec
      Foo.SpecHook
  build-depends:
      base    == 4.*
    , hspec
  default-language: Haskell2010

test-suite with-config
  build-tool-depends: hspec-discover:hspec-discover
  type:
      exitcode-stdio-1.0
  ghc-options:
      -Wall
  hs-source-dirs:
      with-config
  main-is:
      Spec.hs
  other-modules:
      FooSpec
      SpecConfig
  build-depends:
      base    == 4.*
    , hspec
    , hspec-core
  default-language: Haskell2010
